tests/error/func_arg_defined.gw
// [contains] is already defined in this scope
function void test(int i, int i){}
